Minor fixes (heading m-top, hexa-cta contrast)

--- a/tailwind/custom/base.css
+++ b/tailwind/custom/base.css
@@ -27,6 +27,7 @@ body {
 	@apply text-lg;
 }
 
+strong,
 h1, h2, h3,
 h4, h5, h6 {
 	@apply text-purple font-medium;
