--- a/tailwind/custom/components/hexa-cta.css
+++ b/tailwind/custom/components/hexa-cta.css
@@ -1,13 +1,15 @@
-.hexa-cta,
-.hexa-cta-white {
+.hexa-cta {
 	@apply relative inline-block overflow-hidden;
     @apply py-2 pr-14 rtl:pr-0 rtl:pl-14;
     @apply font-medium uppercase;
     @apply text-purple;
 }
 
-.hexa-cta::before,
-.hexa-cta-white::before {
+.has-violet-background-color .hexa-cta {
+	@apply text-white;
+}
+
+.hexa-cta::before {
 	@apply absolute inset-0;
     @apply bg-right bg-no-repeat;
     @apply rtl:-scale-x-100;
@@ -16,8 +18,12 @@
 	background-image: url("data:image/svg+xml,%3Csvg version='1.1' id='Calque_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 50.7 34.9' style='enable-background:new 0 0 50.7 34.9;' xml:space='preserve'%3E%3Cstyle type='text/css'%3E .st0%7Bfill-rule:evenodd;clip-rule:evenodd;fill:%23FFD200;%7D .st1%7Bfill-rule:evenodd;clip-rule:evenodd;fill:%23310046;%7D%0A%3C/style%3E%3Cg id='Group' transform='translate(135.000000, 0.000000)'%3E%3Cpath id='Fill-1_5_' class='st0' d='M-85.3,8.1l-14.1-7.8c-0.6-0.3-1.3-0.3-1.9,0l-3.2,1.8l-6.2,3.4l-4.7,2.6c-0.6,0.3-1,0.9-1,1.6 v15.6c0,0.7,0.4,1.3,1,1.6l14.1,7.8c0.6,0.3,1.3,0.3,1.9,0l14.1-7.8c0.6-0.3,1-0.9,1-1.6v-2.9v-7.7v-5C-84.3,9-84.7,8.4-85.3,8.1' /%3E%3Cg id='_x30_1-Atomes-_x2F_-02-Icones-_x2F_-05-Arrow-_x2F_-02-Right'%3E%3Cpath id='Fill-1_6_' class='st1' d='M-103.2,16.9l-4.8-4.8c-0.1-0.2-0.4-0.2-0.6-0.2c-0.2,0-0.4,0.1-0.6,0.2 c-0.2,0.1-0.2,0.3-0.2,0.5c0,0.2,0.1,0.4,0.2,0.5l3.4,3.4h-28.6c-0.4,0-0.7,0.4-0.7,0.8c0,0.4,0.3,0.8,0.7,0.8h28.6l-3.4,3.3 c-0.2,0.1-0.2,0.3-0.2,0.5c0,0.2,0.1,0.4,0.2,0.5c0.1,0.2,0.4,0.2,0.6,0.2c0.2,0,0.4-0.1,0.6-0.2l4.8-4.6c0.2-0.1,0.2-0.3,0.2-0.5 C-102.9,17.2-103,17-103.2,16.9'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E%0A");
 }
 
-.hexa-cta-white::before {
+.has-yellow-background-color .hexa-cta::before {
 	background-image: url("data:image/svg+xml,%3Csvg version='1.1' id='Calque_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 50.7 34.9' style='enable-background:new 0 0 50.7 34.9;' xml:space='preserve'%3E%3Cstyle type='text/css'%3E .st0%7Bfill-rule:evenodd;clip-rule:evenodd;fill:%23FFFFFF;%7D .st1%7Bfill-rule:evenodd;clip-rule:evenodd;fill:%23310046;%7D%0A%3C/style%3E%3Cg id='Group' transform='translate(135.000000, 0.000000)'%3E%3Cpath id='Fill-1_5_' class='st0' d='M-85.3,8.1l-14.1-7.8c-0.6-0.3-1.3-0.3-1.9,0l-3.2,1.8l-6.2,3.4l-4.7,2.6c-0.6,0.3-1,0.9-1,1.6 v15.6c0,0.7,0.4,1.3,1,1.6l14.1,7.8c0.6,0.3,1.3,0.3,1.9,0l14.1-7.8c0.6-0.3,1-0.9,1-1.6v-2.9v-7.7v-5C-84.3,9-84.7,8.4-85.3,8.1' /%3E%3Cg id='_x30_1-Atomes-_x2F_-02-Icones-_x2F_-05-Arrow-_x2F_-02-Right'%3E%3Cpath id='Fill-1_6_' class='st1' d='M-103.2,16.9l-4.8-4.8c-0.1-0.2-0.4-0.2-0.6-0.2c-0.2,0-0.4,0.1-0.6,0.2 c-0.2,0.1-0.2,0.3-0.2,0.5c0,0.2,0.1,0.4,0.2,0.5l3.4,3.4h-28.6c-0.4,0-0.7,0.4-0.7,0.8c0,0.4,0.3,0.8,0.7,0.8h28.6l-3.4,3.3 c-0.2,0.1-0.2,0.3-0.2,0.5c0,0.2,0.1,0.4,0.2,0.5c0.1,0.2,0.4,0.2,0.6,0.2c0.2,0,0.4-0.1,0.6-0.2l4.8-4.6c0.2-0.1,0.2-0.3,0.2-0.5 C-102.9,17.2-103,17-103.2,16.9'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E%0A");
+}
+
+.has-violet-background-color .hexa-cta::before {
+	background-image: url("data:image/svg+xml,%3Csvg version='1.1' id='Calque_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 50.7 34.9' style='enable-background:new 0 0 50.7 34.9;' xml:space='preserve'%3E%3Cstyle type='text/css'%3E .st0%7Bfill-rule:evenodd;clip-rule:evenodd;fill:%23FFD200;%7D .st1%7Bfill-rule:evenodd;clip-rule:evenodd;fill:%23FFF;%7D%0A%3C/style%3E%3Cg id='Group' transform='translate(135.000000, 0.000000)'%3E%3Cpath id='Fill-1_5_' class='st0' d='M-85.3,8.1l-14.1-7.8c-0.6-0.3-1.3-0.3-1.9,0l-3.2,1.8l-6.2,3.4l-4.7,2.6c-0.6,0.3-1,0.9-1,1.6 v15.6c0,0.7,0.4,1.3,1,1.6l14.1,7.8c0.6,0.3,1.3,0.3,1.9,0l14.1-7.8c0.6-0.3,1-0.9,1-1.6v-2.9v-7.7v-5C-84.3,9-84.7,8.4-85.3,8.1' /%3E%3Cg id='_x30_1-Atomes-_x2F_-02-Icones-_x2F_-05-Arrow-_x2F_-02-Right'%3E%3Cpath id='Fill-1_6_' class='st1' d='M-103.2,16.9l-4.8-4.8c-0.1-0.2-0.4-0.2-0.6-0.2c-0.2,0-0.4,0.1-0.6,0.2 c-0.2,0.1-0.2,0.3-0.2,0.5c0,0.2,0.1,0.4,0.2,0.5l3.4,3.4h-28.6c-0.4,0-0.7,0.4-0.7,0.8c0,0.4,0.3,0.8,0.7,0.8h28.6l-3.4,3.3 c-0.2,0.1-0.2,0.3-0.2,0.5c0,0.2,0.1,0.4,0.2,0.5c0.1,0.2,0.4,0.2,0.6,0.2c0.2,0,0.4-0.1,0.6-0.2l4.8-4.6c0.2-0.1,0.2-0.3,0.2-0.5 C-102.9,17.2-103,17-103.2,16.9'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E%0A");
 }
 
 .wp-block-button.is-style-hexagone-cta a {
